# PotholeDetectionSystemEmbeddedApp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: ConfigurationUtils.h  accelerometer.h  accelerometerutils.h  camera.h  configurationutils.h  executionmodes.h  fingerprint.h  networking.h
include/accelerometer/: accelerometer.h  features.h  ml.h  utils.h
include/execution/: modes.h  test.h  utils.h
include/execution/observables/: accelerometer.h  camera.h  gps.h
include/execution/observers/: accelerometer.h  camera.h  gps.h
include/gps/: GPSDataStore.h  GPSDataUpdater.h
include/iot/: camera.h  gps.h  networking.h
include/raspberrypi/: Led.h  raspberrypiutils.h
include/serialport/: SerialPort.h  SerialPortUtils.h  SigrokSerialPortWrapper.h
res/bayes/: model.yml
res/config/: config.json  svm.config.template.json
src/: ConfigurationUtils.cpp  accelerometer.cpp  accelerometerutils.cpp  camera.cpp  configurationutils.cpp  executionmodes.cpp  fingerprint.cpp  gps.cpp  networking.cpp
src/accelerometer/: accelerometer.cpp  features.cpp  ml.cpp  utils.cpp
src/execution/: modes.cpp  test.cpp  utils.cpp
src/execution/observables/: accelerometer.cpp  accellerometer.cpp  camera.cpp  gps.cpp
src/execution/observers/: accelerometer.cpp  camera.cpp  gps.cpp
src/gps/: GPSDataStore.cpp  GPSDataUpdater.cpp
src/raspberrypi/: Led.cpp  led.cpp  raspberrypiutils.cpp
src/serialport/: SerialPort.cpp  SerialPortUtils.cpp  SigrokSerialPortWrapper.cpp
